--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "light-bootstrap-dashboard-react",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://cladiusiv.github.io/webtest1/",
+  "homepage": "https://cladiusiv.github.io/webtest1",
   "dependencies": {
     "bootstrap": "3.3.7",
     "chalk": "^2.4.2",
@@ -32,7 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "compile-sass": "node-sass src/assets/sass/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.css",
